Feature ETP-4177: Fix isRegisteredColumn to check base reference and search key